--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Greater Palm Springs
-description: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+description: Palm Springs eternal. That’s how the saying goes, right? It's certainly hard to tire of Greater Palm Springs and its nine beautiful cities, known for helping to relax, revive and energize those lucky enough to visit. Spend a few days trekking through Joshua Tree State Park, sampling the healthful farm-to-table fare on North Palm Canyon Drive and bathing in the geothermal mineral waters of Desert Hot Springs, and we think you'll agree there's something timelessly appealing about this one-of-a-kind desert oasis.
 baseurl: "/greater-palm-springs" # the subpath of your site, e.g. /blog/
 url: "http://mp.secretescapes.com" # the base hostname & protocol for your site
 
