--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,53 +1,35 @@
-- title: Lorem ipsum dolor sit amet consectetur adipisicing elit
-  location: asperiores molestiae provident fugit temporibus officiis
-  description: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
-  price: 459
-  price-description: per person for 4 nights
-  saved: 37
-  expires: 2018/04/14
-  link: "#se-offer-page"
+- title: Convenient and modern Palm Springs suites
+  location: Hyatt Palm Springs, Palm Springs, California
+  description: A modern Palm Springs retreat with a pool, within easy reach of a golf course and downtown sights
+  price: 79
+  price-description: per suite per night
+  saved: 39
+  expires: 2017/08/18
+  link: https://us.secretescapes.com/hyatt-palm-springs-palm-springs-california/sale?utm_source=SE&utm_medium=Hub&utm_campaign=GPS_2017_hyatt
 
-- title: Lorem ipsum dolor sit amet consectetur adipisicing elit
-  location: asperiores molestiae provident fugit temporibus officiis
-  description: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
-  price: 459
-  price-description: per person for 4 nights
-  saved: 37
-  expires: 2018/04/14
-  link: "#se-offer-page"
+- title: Hip getaway in sunny Palm Springs
+  location: Saguaro Palm Springs, California
+  description: A colorful room at a trendy and stylish desert oasis, with a fun pool scene and plenty of buzz to its name
+  price: 69
+  price-description: per room per night
+  saved: 47
+  expires: 2017/08/14
+  link: https://us.secretescapes.com/hip-getaway-in-sunny-palm-springs-saguaro-palm-springs-california/sale?utm_source=SE&utm_medium=Hub&utm_campaign=GPS_2017_saguaro
 
-- title: Lorem ipsum dolor sit amet consectetur adipisicing elit
-  location: asperiores molestiae provident fugit temporibus officiis
-  description: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
-  price: 459
-  price-description: per person for 4 nights
-  saved: 37
-  expires: 2018/04/14
-  link: "#se-offer-page"
+- title: Retro-inspired Palm Springs spa hotel
+  location: Riviera Palm Springs, California
+  description: A stylish stay in a room or suite at a luxurious desert oasis with a beautiful pool and a divine spa
+  price: 119
+  price-description: per room per night
+  saved: 52
+  expires: 2017/08/14
+  link: https://us.secretescapes.com/riviera-palm-springs-california/sale?utm_source=SE&utm_medium=Hub&utm_campaign=GPS_2017_riviera
 
-- title: Lorem ipsum dolor sit amet consectetur adipisicing elit
-  location: asperiores molestiae provident fugit temporibus officiis
-  description: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
-  price: 459
-  price-description: per person for 4 nights
-  saved: 37
-  expires: 2018/04/14
-  link: "#se-offer-page"
-
-- title: Lorem ipsum dolor sit amet consectetur adipisicing elit
-  location: asperiores molestiae provident fugit temporibus officiis
-  description: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
-  price: 459
-  price-description: per person for 4 nights
-  saved: 37
-  expires: 2018/04/14
-  link: "#se-offer-page"
-
-- title: Lorem ipsum dolor sit amet consectetur adipisicing elit
-  location: asperiores molestiae provident fugit temporibus officiis
-  description: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
-  price: 459
-  price-description: per person for 4 nights
-  saved: 37
-  expires: 2018/04/14
-  link: "#se-offer-page"
+- title: Lakeside Coachella Valley boutique hotel
+  location: Chateau at Lake La Quinta, California
+  description: Contemporary boutique style in the Coachella Valley, at a freshly renovated hotel right next to a pretty lake
+  price: 119
+  price-description: per room per night
+  saved: 20
+  expires: 2017/08/14
+  link: https://us.secretescapes.com/lakeside-coachella-valley-boutique-hotel-chateau-at-lake-la-quinta-california/sale?utm_source=SE&utm_medium=Hub&utm_campaign=GPS_2017_chateau
