--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,6 @@
     "jquery": "1.11.1",
     "susy": "~2.2.6",
     "reset-css": "^2.2.0",
-    "FitText.js": "^1.2.0",
-    "waypoints": "^4.0.1"
+    "jquery.countdown": "^2.2.0"
   }
 }
