--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -3,18 +3,9 @@
   description: A 360-acre golf, wellness, tennis and dining destination in the Greater Palm Springs region
   price: 99
   price-description: per room per night
-  saved: 27
+  saved: 34
   expires: 2017/08/28
   link: https://us.secretescapes.com/westin-mission-hills-golf-resort-and-spa-rancho-mirage-california/sale?utm_source=SE&utm_medium=Hub&utm_campaign=GPS_2017_westin_mission_hills
-
-- title: Chateau at Lake La Quinta
-  location: Lake La Quinta, Greater Palm Springs, California
-  description: A lake-view room or suite at an inviting boutique getaway in Greater Palm Springs
-  price: 119
-  price-description: per room per night
-  saved: 20
-  expires: 2017/08/21
-  link: https://us.secretescapes.com/lakeside-coachella-valley-boutique-hotel-chateau-at-lake-la-quinta-california/sale?utm_source=SE&utm_medium=Hub&utm_campaign=GPS_2017_chateau_la_quinta
 
 - title: Renaissance Indian Wells Resort & Spa
   location: Indian Wells, Greater Palm Springs, California
@@ -43,20 +34,20 @@
   expires: 2017/08/28
   link: https://us.secretescapes.com/hyatt-regency-indian-wells-resort-and-spa-indian-wells-california/sale?utm_source=SE&utm_medium=Hub&utm_campaign=GPS_2017_hyatt_regency_indian_wells
 
-- title: Convenient and modern Palm Springs suites
-  location: Hyatt Palm Springs, Palm Springs, California
-  description: A modern Palm Springs retreat with a pool, within easy reach of a golf course and downtown sights
-  price: 79
-  price-description: per suite per night
-  saved: 39
-  expires: 2017/08/18
-  link: https://us.secretescapes.com/hyatt-palm-springs-palm-springs-california/sale?utm_source=SE&utm_medium=Hub&utm_campaign=GPS_2017_hyatt
-
-- title: Hip getaway in sunny Palm Springs
-  location: Saguaro Palm Springs, California
-  description: A colorful room at a trendy and stylish desert oasis, with a fun pool scene and plenty of buzz to its name
-  price: 69
-  price-description: per room per night
+- title: La Quinta Resort & Club, A Waldorf Astoria Resort
+  location: La Quinta, Greater Palm Springs, California
+  description: A deluxe casita at Waldorf Astoria’s only Palm Springs property, with resort credit and discounts
+  price: 189
+  price-description: per casita per night
   saved: 47
-  expires: 2017/08/21
-  link: https://us.secretescapes.com/hip-getaway-in-sunny-palm-springs-saguaro-palm-springs-california/sale?utm_source=SE&utm_medium=Hub&utm_campaign=GPS_2017_saguaro
+  expires: 2017/09/04
+  link: https://us.secretescapes.com/la-quinta-resort-and-club-a-waldorf-astoria-resort-la-quinta-greater-palm-springs-california/sale?utm_source=SE&utm_medium=Hub&utm_campaign=GPS_2017_la_quinta_resort_and_club
+
+- title: Biggest Loser Resort Palm Desert
+  location: Palm Desert, Greater Palm Springs, California
+  description: A health and wellness destination in the Coachella Valley, with weight-loss guidance and support
+  price: 435
+  price-description: per room per night
+  saved: 10
+  expires: 2017/08/28
+  link: https://us.secretescapes.com/biggest-loser-resort-palm-desert-palm-desert-california/sale?utm_source=SE&utm_medium=Hub&utm_campaign=GPS_2017_biggest_loser_resort
